# Asymov-Website-Downloader

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CURSOR.md  DEPLOY.md  Dockerfile  Procfile  RAILWAY_DEPLOY.md  README.md  app.py  build.sh  downloader.py  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt  run.py
app/: __init__.py  config.py  session.py
app/llm/: __init__.py  factory.py
app/routes/: __init__.py  assistant.py  config.py  download.py  extraction.py  workspace.py
app/services/: assistant.py  downloader.py  extractor.py  workspace.py
docs/: AI_SPEC.md  Design_System_Application.md
static/css/: app.css
static/js/: app.js  editor-inject.js
templates/: index.html
workspace/: .config.json
